Updated Readme, ensured links don't wrap, copy tweaks

--- a/next/assets/css/core.css
+++ b/next/assets/css/core.css
@@ -101,7 +101,8 @@ a {
   color: #222;
   padding-bottom: 5px;
   position: relative;
-  text-decoration: none; }
+  text-decoration: none;
+  white-space: nowrap; }
   a:after {
     background-color: #222;
     bottom: 0;
